# Intelligent-Reseach-Paper-Assistant-IRPA-

./: README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routers.py/: papers.py
backend/app/core/: config.py
backend/app/db/: database.py
